# tcLex

./: .gitattributes  .gitignore  ANNOUNCE.txt  Makefile.am  Makefile.in  README.txt  TODO.txt  changes.txt  config.h.in  configure  configure.ac  configure.scan  license.txt
.github/workflows/: codeql.yml
doc/en/: about.htm  about_toc.htm  blank.htm  complement.htm  complement_toc.htm  design.htm  design_toc.htm  en.helpindex  examples.htm  examples_toc.htm  index.htm  menu.htm  tcLex.css  using.htm  using_toc.htm
examples/C/: README.txt  parseC.tcl  test.c  test.tcl
examples/XML/: README.txt  XML.tcl
examples/pascal/: README.txt  pascal.l  pascal.tcl  test.p
examples/strip/: README.txt  strip.l  strip.tcl
fr/: AFAIRE.txt  ANNONCE.txt  LISEZMOI.txt  changements.txt
src/: .gitattributes  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.orig  Makefile_orig.in  NEWS  RE80.c  RE81.c  RE82.c  aclocal.m4  config.h.in  configure  configure.ac  configure.in  configure.scan  makefile.vc  pkgIndex.tcl  pkgIndex.tcl.win  tcLex.c  tcLex.h  tcLexInt.h  tcLexRE.c  tcLexRE.h  tcl-8.5_CDStructures.h  tcl-8.6_CDStructures.h  tclInt.h  tclUnixPort.h  tclsh-8.5_CDStructures.h
src/m4/: acinclude.m4  tcl.m4
