dnl#                                               -*- Autoconf -*-
dnl# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.72])
AC_INIT([tcLex],[1.2a1],[frederic.bonnet@ciril.fr])
AC_CONFIG_SRCDIR([examples/pascal/pascal.l])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AM_INIT_AUTOMAKE([1.13 foreign])

# Output.
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([src])
AC_OUTPUT
